2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
      scripts/openjump.sh:
      Using $JAVA_HOME if it's set.

2008-02-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Added SLD-Export of SVG images.

2008-02-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/VertexStyleChooser.java,
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/VertexStyle.java:
      Added support for SVGs, whose color is changed on the fly. Also fixed small bugs in the styling panel.

2008-02-07 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/util/SLDImporter.java,
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Added support for halos (text outlines).

2008-02-07 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/jump/workbench/ui/wizard/WizardDialog.java:
      The next button is the default button.

2008-02-07 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Fixed smaller problems, added label style importing.

2008-02-06 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java,
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Fixed/enhanced import/export of color theming styles.

2008-02-04 Andreas Schmitz <schmitz@lat-lon.de>
      src/language/jump_it.properties,
      src/language/jump_fi.properties,
      src/language/jump.properties,
      src/language/jump_zh_CN.properties,
      src/language/jump_en.properties,
      src/language/jump_pt.properties,
      src/language/jump_pt_BR.properties,