@@ -1,4 +1,10 @@
 2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
+      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,
+      src/de/latlon/deejump/plugin/style/XSLUtility.java,
+      src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java:
+      Added proper color exporting of SVG images.
+
+2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
       scripts/openjump.sh:
       Using $JAVA_HOME if it's set.
 
